--- a/ansible-docker/playbooks/ec2_deploy_web.yaml
+++ b/ansible-docker/playbooks/ec2_deploy_web.yaml
@@ -17,9 +17,9 @@
         dest: /web-server-config/ # Remote directory path
         mode: '0755'
         #recurse: yes
-    - name: create docker image 
+    - name: create docker image and run the app
       shell: |
         cd /web-server-config/web-contianer
         sudo cp /tmp/nginx.conf nginx.conf
         sudo docker build -t nginx_image .
-        docker run -d -p 8080:80 -p 443:443 --name abk_app nginx_image:latest
+        docker service create --name nginx --replicas 3 --publish 8080:80 --publish 443:443  nginx_image
